[package]
name = "aurora_dsql_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7" ,features = ["behavior-version-latest"]}
tokio = { version = "1", features = ["full"] }
aws-sdk-dsql = "1.1.0"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"]}
axum = "0.6.0"
sqlx = { version="0.8.3", features = [ "postgres", "runtime-tokio-native-tls"] }
chrono = { version="0.4.39" }
anyhow = { version="1.0.95" }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
opentelemetry-otlp = "0.26.0"
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
